Fixed samples for API changes and scripts for enable-preview source version.