@@ -29,9 +29,8 @@
  * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.NativeArena;
 import java.lang.foreign.SegmentAllocator;
-import java.lang.foreign.MemorySession;
 import blas.*;
 import static blas.cblas_h.*;
 
@@ -54,7 +53,7 @@ public class TestBlas {
         alpha = 1;
         beta = 0;
 
-        try (var session = MemorySession.openConfined()) {
+        try (var session = NativeArena.openConfined()) {
             var a = session.allocateArray(C_DOUBLE,
                 1.0, 2.0, 3.0, 4.0,
                 1.0, 1.0, 1.0, 1.0,
