@@ -9,19 +9,17 @@ import java.lang.foreign.*;
 import static java.lang.foreign.ValueLayout.*;
 public interface JImageGetResource_t {
 
-    long apply(java.lang.foreign.MemoryAddress jimage, long location, java.lang.foreign.MemoryAddress buffer, long size);
-    static MemorySegment allocate(JImageGetResource_t fi, MemorySession session) {
-        return RuntimeHelper.upcallStub(JImageGetResource_t.class, fi, constants$2.JImageGetResource_t$FUNC, "(Ljava/lang/foreign/MemoryAddress;JLjava/lang/foreign/MemoryAddress;J)J", session);
+    long apply(java.lang.foreign.MemorySegment jimage, long location, java.lang.foreign.MemorySegment buffer, long size);
+    static MemorySegment allocate(JImageGetResource_t fi, Arena session) {
+        return RuntimeHelper.upcallStub(JImageGetResource_t.class, fi, constants$2.JImageGetResource_t$FUNC, session);
     }
-    static JImageGetResource_t ofAddress(MemoryAddress addr, MemorySession session) {
-        MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
-        return (java.lang.foreign.MemoryAddress _jimage, long _location, java.lang.foreign.MemoryAddress _buffer, long _size) -> {
-            try {
-                return (long)constants$2.JImageGetResource_t$MH.invokeExact((Addressable)symbol, (java.lang.foreign.Addressable)_jimage, _location, (java.lang.foreign.Addressable)_buffer, _size);
-            } catch (Throwable ex$) {
-                throw new AssertionError("should not reach here", ex$);
-            }
-        };
+    static long apply(MemorySegment symbol
+, java.lang.foreign.MemorySegment _jimage, long _location, java.lang.foreign.MemorySegment _buffer, long _size) {
+        try {
+            return (long)constants$2.JImageGetResource_t$MH.invokeExact(symbol, _jimage, _location, _buffer, _size);
+        } catch (Throwable ex$) {
+            throw new AssertionError("should not reach here", ex$);
+        }
     }
 }
 
