@@ -9,19 +9,17 @@ import java.lang.foreign.*;
 import static java.lang.foreign.ValueLayout.*;
 public interface JImagePackageToModule_t {
 
-    java.lang.foreign.Addressable apply(java.lang.foreign.MemoryAddress jimage, java.lang.foreign.MemoryAddress package_name);
-    static MemorySegment allocate(JImagePackageToModule_t fi, MemorySession session) {
-        return RuntimeHelper.upcallStub(JImagePackageToModule_t.class, fi, constants$1.JImagePackageToModule_t$FUNC, "(Ljava/lang/foreign/MemoryAddress;Ljava/lang/foreign/MemoryAddress;)Ljava/lang/foreign/Addressable;", session);
+    java.lang.foreign.MemorySegment apply(java.lang.foreign.MemorySegment jimage, java.lang.foreign.MemorySegment package_name);
+    static MemorySegment allocate(JImagePackageToModule_t fi, Arena session) {
+        return RuntimeHelper.upcallStub(JImagePackageToModule_t.class, fi, constants$1.JImagePackageToModule_t$FUNC, session);
     }
-    static JImagePackageToModule_t ofAddress(MemoryAddress addr, MemorySession session) {
-        MemorySegment symbol = MemorySegment.ofAddress(addr, 0, session);
-        return (java.lang.foreign.MemoryAddress _jimage, java.lang.foreign.MemoryAddress _package_name) -> {
-            try {
-                return (java.lang.foreign.Addressable)(java.lang.foreign.MemoryAddress)constants$1.JImagePackageToModule_t$MH.invokeExact((Addressable)symbol, (java.lang.foreign.Addressable)_jimage, (java.lang.foreign.Addressable)_package_name);
-            } catch (Throwable ex$) {
-                throw new AssertionError("should not reach here", ex$);
-            }
-        };
+    static java.lang.foreign.MemorySegment apply(MemorySegment symbol
+, java.lang.foreign.MemorySegment _jimage, java.lang.foreign.MemorySegment _package_name) {
+        try {
+            return (java.lang.foreign.MemorySegment)constants$1.JImagePackageToModule_t$MH.invokeExact(symbol, _jimage, _package_name);
+        } catch (Throwable ex$) {
+            throw new AssertionError("should not reach here", ex$);
+        }
     }
 }
 
