@@ -29,9 +29,9 @@
  * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.NativeArena;
 import java.lang.foreign.SegmentAllocator;
-import static java.lang.foreign.MemoryAddress.NULL;
+import static java.lang.foreign.MemorySegment.NULL;
 // import jextracted tcl 'header' class
 import static org.tcl.tcl_h.*;
 import org.tcl.*;
@@ -53,7 +53,7 @@ public class TCLMain {
             puts "Full name: $name(first) $name(last)"
         """;
 
-        try (var session = MemorySession.openConfined()) {
+        try (var session = NativeArena.openConfined()) {
             var str = session.allocateUtf8String(script);
             Tcl_Eval(interp, str);
         }
